--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port = 9000
+spring.datasource.url=*
+spring.datasource.username=*
+spring.datasource.password=*
 
+#Logging
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
