Login/Register features added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=*
 #Logging
 logging.level.org.hibernate.SQL=trace
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+spring.security.user.name=*
+spring.security.user.password=*
+
+--Usinggeneratedsecuritypassword*
+
