Authorization feature updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.security.user.password=*
 
 --Usinggeneratedsecuritypassword*
 
+
+
+--(DOGANHOCA)spring.security.oauth2.client.registration.github.client-id*
+--(DOGANHOCA)spring.security.oauth2.client.registration.github.client-secret*
