Authorization & authentication features added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,5 @@ spring.datasource.password=*
 logging.level.org.hibernate.SQL=trace
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
-spring.security.user.name=*
-spring.security.user.password=*
-
---Usinggeneratedsecuritypassword*
-
-
-
---(DOGANHOCA)spring.security.oauth2.client.registration.github.client-id*
---(DOGANHOCA)spring.security.oauth2.client.registration.github.client-secret*
+spring.security.oauth2.client.registration.github.client-id=*
+spring.security.oauth2.client.registration.github.client-secret=*
